# shopify-gql

./: Cargo.toml  Notes.md
src/: bulk_mutations.rs  common.rs  lib.rs  utils.rs
src/products/: mod.rs  product.rs  product_variant.rs
