[package]
name = "shopify-gql"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.6"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
